@@ -68,6 +68,7 @@ tests.target = \
     test/test-doge.debug \
     test/test-doge \
     test/test-doge-abs-reloc \
+    test/test-doge-eh.debug \
     test/test-doge-eh
 utils.host = \
     bin/innocent-pear-c++ \
